Bug 944947 - label truncation is not fully supported in Australis menu widgets, r=MattN
UltraBlame original commit: f9e54107a580d85e8370dff01171dbc1e788229c

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -483,6 +483,61 @@ padding
 0
 ;
 }
+.
+panelUI
+-
+grid
+.
+panel
+-
+combined
+-
+button
+>
+.
+toolbarbutton
+-
+text
+.
+widget
+-
+overflow
+-
+list
+.
+toolbarbutton
+-
+menubutton
+-
+button
+>
+.
+toolbarbutton
+-
+text
+.
+widget
+-
+overflow
+-
+list
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+text
+{
+font
+-
+size
+:
+10px
+;
+}
 toolbaritem
 [
 cui
@@ -516,122 +571,39 @@ item
 .
 toolbarbutton
 -
-text
-#
-bookmarks
+multiline
 -
-menu
+text
+.
+panelUI
+-
+grid
+.
+toolbarbutton
+-
+menubutton
 -
 button
 >
-toolbarbutton
->
 .
 toolbarbutton
+-
+multiline
 -
 text
-:
+.
+panelUI
 -
-moz
--
-any
-(
-#
-PanelUI
--
-contents
-#
-widget
--
-overflow
--
-list
-)
->
-toolbarpaletteitem
->
-toolbaritem
->
+grid
+.
 toolbarbutton
+-
+1
 >
 .
 toolbarbutton
 -
-text
-:
--
-moz
--
-any
-(
-#
-PanelUI
--
-contents
-#
-widget
--
-overflow
--
-list
-)
->
-toolbaritem
->
-toolbarbutton
->
-.
-toolbarbutton
--
-text
-:
--
-moz
--
-any
-(
-#
-PanelUI
--
-contents
-#
-widget
--
-overflow
--
-list
-)
->
-toolbarpaletteitem
->
-toolbarbutton
->
-.
-toolbarbutton
--
-text
-:
--
-moz
--
-any
-(
-#
-PanelUI
--
-contents
-#
-widget
--
-overflow
--
-list
-)
->
-toolbarbutton
->
-.
-toolbarbutton
+multiline
 -
 text
 {
@@ -640,6 +612,18 @@ font
 size
 :
 10px
+;
+margin
+:
+2px
+0
+0
+;
+text
+-
+align
+:
+center
 ;
 }
 #
