--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -814,46 +814,6 @@ button
 )
 ;
 }
-toolbarbutton
-[
-type
-=
-"
-wrap
-"
-]
-{
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-bindings
-/
-toolbarbutton
-.
-xml
-#
-toolbarbutton
--
-wrapping
--
-label
-"
-)
-;
-}
 toolbar
 [
 mode
@@ -3948,7 +3908,9 @@ label
 .
 toolbarbutton
 -
-label
+multiline
+-
+text
 {
 -
 moz
